# test_solol

./: README.md  pubspec.yaml  structure.txt
android/: gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_opencv.cpp
android/app/src/main/kotlin/com/example/foot_measurement_app/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: app_config.dart  theme.dart
lib/core/services/: camera_service.dart  mediapipe_service.dart  opencv_service.dart  yolo_service.dart
lib/core/utils/: calibration_utils.dart  foot_calculator.dart
lib/features/foot_measurement/data/models/: foot_measurement.dart
lib/features/foot_measurement/data/repositories/: measurement_repository.dart
lib/features/foot_measurement/logic/: foot_detection_bloc.dart
lib/features/foot_measurement/presentation/screens/: calibration_screen.dart  camera_screen.dart  results_screen.dart
lib/features/foot_measurement/presentation/widgets/: camera_overlay.dart  foot_points_painter.dart
lib/shared/constants/: app_dimensions.dart
lib/shared/widgets/: custom_button.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
